# python-baseline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py
project_name/: __init__.py  __main__.py  settings.py
